fix spacing on cards

--- a/_sass/first.scss
+++ b/_sass/first.scss
@@ -49,13 +49,8 @@ section.first {
 
     @media (min-width: 959px) {
       font-size: 13px;
-      padding-top: 84px;
+      padding-top: 74px;
       padding-right: 88px;
-    }
-
-    @media (min-width: 1079px) {
-      font-size: 13px;
-      padding-top: 87px;
     }
   }
 
